# xe-ispf-editor

./: README.md
releases/: build-deb.sh  gxe-ispf-1.29-armhf.deb
releases/gxe-ispf-1.29-armhf/DEBIAN/: changelog  control
releases/gxe-ispf-1.29/DEBIAN/: control  copyright
src/: README.md  install_bin_for_deb  install_dev_libs
src/gxe-1.29/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  gxe.desktop  gxe.desktop.in
src/gxe-1.29/doc/: Makefile  Makefile.am  Makefile.in
src/gxe-1.29/doc/ja/: README.euc  README.utf8  xdigj.txt.euc  xdigj.txt.utf8  xej.txt.euc  xej.txt.utf8  xelnxj.txt.euc  xelnxj.txt.utf8  xereadmj.txt.euc  xereadmj.txt.utf8  xewxej.txt.euc  xewxej.txt.utf8  xpj.txt.euc  xpj.txt.utf8
src/gxe-1.29/po/: Makefile  Makefile.in  Makefile.in.in  POTFILES  POTFILES.in  gxe.pot
src/gxe-1.29/sample/: DoAtFC5  DoAtRH9  charset.c  cobol.lang  configure.ac  gxe.glade  gxe.gladep  highlight-2.16.cli.s390x.tgz  highlight-2.7.cli.tgz  highlight-3.7.cli64.tgz  pl1.lang  puTTY.xekeymap  utf8data.0000-ffff  xe.ini  xe.keytab  xegetdv  xegt  xegt.old  xehosts  xej106.map  xekt  xelnxkey.rh8.0  xelnxkey.rh9  xelnxkey.sw3  xelnxkey.tb6.0  xelnxres.full  xelnxres.rh8.0  xelnxres.rh9  xelnxres.sw3  xelnxres.tb6.0  xesetxenv  xesynl.cfg  xeuctb  xexmap.rh8.0  xexmap.rh9  xexmap.tb6.0  xext  xpesc  xprint.sh  xprint.sho
src/gxe-1.29/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  gxe.c  gxe.h  gxe.map  gxedlg.c  gxedlg.h  gxemfrm.c  gxemfrm.h  gxepage.c  gxepage.h  gxeview.c  gxeview.h  interface.c  interface.h  main.c  support.c  support.h  xxecsub.c  xxecsub.h  xxecsub2.c  xxedef.h  xxefile.c  xxekbd.c  xxemain.c  xxemain.h  xxemouse.c  xxeprt.c  xxescr.c  xxexei.c  xxexei.h  xxexei3.c
src/gxe-1.29/src/.deps/: gxe-callbacks.Po  gxe-gxe.Po  gxe-gxedlg.Po  gxe-gxemfrm.Po  gxe-gxepage.Po  gxe-gxeview.Po  gxe-interface.Po  gxe-main.Po  gxe-support.Po  gxe-xxecsub.Po  gxe-xxecsub2.Po  gxe-xxefile.Po  gxe-xxekbd.Po  gxe-xxemain.Po  gxe-xxemouse.Po  gxe-xxeprt.Po  gxe-xxescr.Po  gxe-xxexei.Po  gxe-xxexei2.Po  gxe-xxexei3.Po
src/gxe-1.29/src/TurnkeyMVS/: XE4S001Z.ASM  XE4S001Z.JCL  XE4S001Z.LKEDJCL  XE4S001Z.asm.TSOE  XE4S001Z.asm.old  XE4S001Z.asmlist  XE4S001Z.aws.old  install.txt  xe4s001z.aws
src/gxe-1.29/src/TurnkeyMVS/old/: XE4s001Z.aws.v1
src/gxe-1.29/src/TurnkeyMVS/sample/: awsread  awstest
src/gxe-1.29/src/ulib/: Makefile  Makefile.am  Makefile.in
src/gxe-1.29/src/ulib/.deps/: libuserxe_a-u3270.Po  libuserxe_a-u32702.Po  libuserxe_a-u32703.Po  libuserxe_a-uabend.Po  libuserxe_a-uallocl.Po  libuserxe_a-ucalc.Po  libuserxe_a-ucalc2.Po  libuserxe_a-ucvebc.Po  libuserxe_a-ucvebc2.Po  libuserxe_a-ucvebc3.Po  libuserxe_a-ucvebc32.Po  libuserxe_a-ucvebc4.Po  libuserxe_a-ucvebct.Po  libuserxe_a-ucvext.Po  libuserxe_a-ucvext12.Po  libuserxe_a-ucvext2.Po  libuserxe_a-ucvucs.Po  libuserxe_a-ucvucst.Po  libuserxe_a-udbcschk.Po  libuserxe_a-udbcsck2.Po  libuserxe_a-udos2.Po  libuserxe_a-udosl.Po  libuserxe_a-uedit.Po  libuserxe_a-uedit2.Po  libuserxe_a-uehl.Po  libuserxe_a-uerr.Po  libuserxe_a-ufemsg.Po  libuserxe_a-ufile.Po  libuserxe_a-ufile12.Po  libuserxe_a-ufile1f.Po  libuserxe_a-ufile1l.Po  libuserxe_a-ufile1l2.Po  libuserxe_a-ufile2.Po  libuserxe_a-ufile2f.Po  libuserxe_a-ufile2l.Po  libuserxe_a-ufile2l2.Po  libuserxe_a-ufile3.Po  libuserxe_a-ufile3f.Po  libuserxe_a-ufile4.Po  libuserxe_a-ufile5.Po  (+96 more)
src/gxe-1.29/src/ulib/icuLinux/include/unicode/: platform.h  udata.h
src/gxe-1.29/src/xe/: Makefile  Makefile.am  Makefile.in  xe.map  xe3270.map  xeacb.map  xekbchk.map
src/gxe-1.29/src/xe/.deps/: libxxe_a-xe.Po  libxxe_a-xecalc.Po  libxxe_a-xecalc2.Po  libxxe_a-xecalc21.Po  libxxe_a-xecalc22.Po  libxxe_a-xecalc3.Po  libxxe_a-xecap.Po  libxxe_a-xecap2.Po  libxxe_a-xechar.Po  libxxe_a-xechar12.Po  libxxe_a-xechar13.Po  libxxe_a-xechar2.Po  libxxe_a-xecsr.Po  libxxe_a-xedcmd.Po  libxxe_a-xedcmd2.Po  libxxe_a-xedcmd3.Po  libxxe_a-xedcmd4.Po  libxxe_a-xedir.Po  libxxe_a-xedir2.Po  libxxe_a-xedir3.Po  libxxe_a-xedir4.Po  libxxe_a-xedlcmd.Po  libxxe_a-xedlcmd2.Po  libxxe_a-xedlcmd3.Po  libxxe_a-xedlcmd4.Po  libxxe_a-xedlcmd5.Po  libxxe_a-xedlcmd6.Po  libxxe_a-xeebc.Po  libxxe_a-xeerr.Po  libxxe_a-xefcmd.Po  libxxe_a-xefcmd2.Po  libxxe_a-xefcmd22.Po  libxxe_a-xefcmd23.Po  libxxe_a-xefcmd24.Po  libxxe_a-xefcmd25.Po  libxxe_a-xefcmd26.Po  libxxe_a-xefcmd27.Po  libxxe_a-xefcmd3.Po  libxxe_a-xefcmd4.Po  libxxe_a-xefcmd42.Po  (+175 more)
src/gxe-1.29/src/xp/: Makefile  Makefile.am  Makefile.in  gxp.map  xprint.map
src/gxe-1.29/src/xp/.deps/: gxp-xp2p.Po  gxp-xpdesp.Po  gxp-xpebc.Po  gxp-xpesc.Po  gxp-xphex.Po  gxp-xphlp.Po  gxp-xpinp.Po  gxp-xplnxp.Po  gxp-xpmult.Po  gxp-xppf.Po  gxp-xprint.Po  gxp-xpsub1.Po  gxp-xputf.Po  xprint-xp2p.Po  xprint-xpdesp.Po  xprint-xpebc.Po  xprint-xpesc.Po  xprint-xphex.Po  xprint-xphlp.Po  xprint-xpinp.Po  xprint-xpmult.Po  xprint-xppf.Po  xprint-xprint.Po  xprint-xpsub1.Po  xprint-xputf.Po
src/gxe-1.29/src/xsub/: Makefile  Makefile.am  Makefile.in  xbc.map  xci.map  xcv.map  xcvsjisc.map  xdc.map  xdd.map  xdig.map  xds.map  xfc.map  xff.map  xfg.map  xfmt.map  xfs.map  xlow.map  xmj.map  xpe.map  xts.map  xutf8.map
src/gxe-1.29/src/xsub/.deps/: xbc.Po  xci.Po  xcv-xcv.Po  xcvsjisc.Po  xdc.Po  xdd.Po  xdig.Po  xds.Po  xfc.Po  xff.Po  xfg.Po  xfmt.Po  xfs.Po  xlow.Po  xmj.Po  xpe.Po  xts.Po  xutf8.Po
